code improvement based on SonarQube reports